# MetaCrawl

./: .gitignore  DOCUMENTATION.md  Dockerfile  README.MD  docker-compose.yml  main.py  pyproject.toml  urls.txt
metacrawl/: README.md
metacrawl/api/: README.md  app.py
metacrawl/classifiers/: README.md  __init__.py  base.py  heuristic_classifier.py
metacrawl/cli/: README.md  cli.py
metacrawl/config/: README.md  settings.py
metacrawl/extractors/: README.md  __init__.py  base.py  basic_extractor.py  trafilatura_extractor.py
metacrawl/fetchers/: README.md  __init__.py  base.py  http_fetcher.py  playwright_fetcher.py
metacrawl/models/: README.md  __init__.py  models.py
metacrawl/pipeline/: README.md  __init__.py  pipeline.py
metacrawl/topics/: README.md  __init__.py  base.py  tfidf_extractor.py
metacrawl/utils/: README.md  __init__.py  helpers.py  logger.py
src/metacrawl/: __init__.py  classifier.py  cli.py  extractor.py  fetcher.py  interfaces.py  pipeline.py  topics.py
tests/: test_api.py  test_classifier.py  test_cli.py  test_extractors.py  test_fetchers.py  test_pipeline.py  test_topics.py  test_utils.py
